--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ arq = "^0.26.3"
 pydantic = "^1.10.4"
 prometheus-fastapi-instrumentator = "^7.0.0"
 alembic = "*"
-celpy = "*"
+cel-python = "*"
 chevron = "*"
 click = "*"
 json5 = "*"
@@ -48,6 +48,8 @@ sqlalchemy-utils = "*"
 python-multipart = "*"
 ujson = "*"
 pympler = "*"
+elasticsearch = "*"
+pusher = "*"
 
 [tool.poetry.group.dev.dependencies]
 vulture = "^2.14"
