--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ urllib3 = "*"
 PyYAML = "*"
 python-dateutil = "*"
 opentelemetry-instrumentation-sqlalchemy = "*"
-psycopg2 = "*"
+psycopg2-binary = "*"
 gunicorn = "^25.0.3"
 opentelemetry-exporter-otlp = "^1.25.0"
 opentelemetry-instrumentation-logging = "*"
@@ -40,6 +40,7 @@ opentelemetry-semantic-conventions = "*"
 sqlmodel = "0.0.8"
 python-json-logger = "^2.0.7"
 retry = "^0.9.2"
+confluent-kafka = "^2.3.0"
 pytz = "*"
 cloud-sql-python-connector = "*"
 google-auth = "*"
@@ -50,9 +51,11 @@ ujson = "*"
 pympler = "*"
 elasticsearch = "*"
 pusher = "*"
+prometheus-client = "*"
 
 [tool.poetry.group.dev.dependencies]
 vulture = "^2.14"
+pytest = "^7.0"
 
 [build-system]
 requires = ["poetry-core"]
