fix: ci module not found error in tests

--- a/.github/workflows/test-pr-e2e.yml
+++ b/.github/workflows/test-pr-e2e.yml
@@ -62,6 +62,8 @@ jobs:
       
       - name: Run Tests
         run: poetry run pytest tests/
+        env:
+          PYTHONPATH: .
 
   build-backend:
     needs: unit-tests
