--- a/.github/workflows/test-pr-e2e.yml
+++ b/.github/workflows/test-pr-e2e.yml
@@ -128,7 +128,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          push: true
+          push: ${{ github.event_name == 'push' }}
           tags: |
             ghcr.io/${{ steps.repo-owner.outputs.owner }}/keep-event-handler:${{ github.sha }}
             ghcr.io/${{ steps.repo-owner.outputs.owner }}/keep-event-handler:${{ steps.get-version.outputs.version }}
