--- a/.github/workflows/test-pr-e2e.yml
+++ b/.github/workflows/test-pr-e2e.yml
@@ -100,7 +100,7 @@ jobs:
           fi
 
       - name: Login to GitHub Container Registry
-        if: ${{ env.IS_FORK != 'true' }}
+        if: ${{ env.IS_FORK != 'true' && github.event_name == 'push' }}
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -129,6 +129,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: ${{ github.event_name == 'push' }}
+          load: ${{ github.event_name != 'push' }}
           tags: |
             ghcr.io/${{ steps.repo-owner.outputs.owner }}/keep-event-handler:${{ github.sha }}
             ghcr.io/${{ steps.repo-owner.outputs.owner }}/keep-event-handler:${{ steps.get-version.outputs.version }}
